...
    return Column(crossAxisAlignment: CrossAxisAlignment.start, children: [
      Row(mainAxisAlignment: MainAxisAlignment.spaceBetween, children: [
        Text(getChartTitle(_selectedStyle),
            style: Theme.of(context).textTheme.titleMedium),
        PopupMenuButton(
          icon: const Icon(Icons.arrow_drop_down_circle_outlined,
              semanticLabel: 'Select Chart Type'),
          itemBuilder: (BuildContext bc) {
            return const [
              PopupMenuItem(
                value: PensionSummaryChartStyles.planValue,
                child: Text("Plan Value"),
              ),
              PopupMenuItem(
                value: PensionSummaryChartStyles.projectedYearlyAmount,
                child: Text("Projected Yearly Amount"),
              ),
              PopupMenuItem(
                value: PensionSummaryChartStyles.yearlyCharges,
                child: Text("Yearly Charges"),
              ),
              PopupMenuItem(
...
