...
  // Populate the database with some test data
  Future<void> populateTestData() async {
    await clearAllData();

    // create some test pensions
    Pension? p1 =
        await createPension("First Pension", DateTime(2030, 1, 1), null);
    Pension? p2 = await createPension("Pension Co", DateTime(2030, 1, 1), null);
    await createPension(
        "Pension Ltd", DateTime(2030, 1, 1), null); // no statements required
    Pension? p4 = await createPension("Current", DateTime(2030, 1, 1), null);

    // create some test statements
...
